BB-20218: Wrong position of an info icon on a product page - Fixed positions of an info icon - Fixed specific input height

--- a/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/page-templates/list-theme.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/page-templates/list-theme.scss
@@ -72,18 +72,5 @@
                 }
             }
         }
-
-        .product-view-quantity {
-            &__unit {
-                .select2-choice,
-                .select--full {
-                    padding: $list-theme-product-view-quantity-unit-select2-inner-offset-desktop;
-                }
-            }
-
-            &__value .input {
-                padding: $list-theme-product-view-quantity-value-input-inner-offset-desktop;
-            }
-        }
     }
 }
